python/src/pylinguis/parsers/enus/LinguisParser.py
# Generated from LinguisParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LinguisParser ( Parser ):

    grammarFileName = "LinguisParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'println'", "'print'", "'input'", "'assert'", 
                     "'size'", "'def'", "'if'", "'else'", "'return'", "'for'", 
                     "'while'", "'to'", "'do'", "'end'", "'in'", "'null'", 
                     "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", "'^'", 
                     "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'='", 
                     "','", "'?'", "':'" ]

    symbolicNames = [ "<INVALID>", "Println", "Print", "Input", "Assert", 
                      "Size", "Def", "If", "Else", "Return", "For", "While", 
                      "To", "Do", "End", "In", "Null", "Or", "And", "Equals", 
                      "NEquals", "GTEquals", "LTEquals", "Pow", "Excl", 
                      "GT", "LT", "Add", "Subtract", "Multiply", "Divide", 
                      "Modulus", "OBrace", "CBrace", "OBracket", "CBracket", 
                      "OParen", "CParen", "SColon", "Assign", "Comma", "QMark", 
                      "Colon", "Bool", "Number", "Identifier", "String", 
                      "Comment", "Space" ]

    RULE_block = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_functionCall = 3
    RULE_ifStatement = 4
    RULE_ifStat = 5
    RULE_elseIfStat = 6
    RULE_elseStat = 7
    RULE_functionDecl = 8
    RULE_forStatement = 9
    RULE_whileStatement = 10
    RULE_idList = 11
    RULE_exprList = 12
    RULE_expression = 13

    ruleNames =  [ "block", "statement", "assignment", "functionCall", "ifStatement", 
                   "ifStat", "elseIfStat", "elseStat", "functionDecl", "forStatement", 
                   "whileStatement", "idList", "exprList", "expression" ]

    EOF = Token.EOF
    Println=1
    Print=2
    Input=3
    Assert=4
    Size=5
    Def=6
    If=7
    Else=8
    Return=9
    For=10
    While=11
    To=12
    Do=13
    End=14
    In=15
    Null=16
    Or=17
    And=18
    Equals=19
    NEquals=20
    GTEquals=21
    LTEquals=22
    Pow=23
    Excl=24
    GT=25
    LT=26
    Add=27
    Subtract=28
    Multiply=29
    Divide=30
    Modulus=31
    OBrace=32
    CBrace=33
    OBracket=34
    CBracket=35
    OParen=36
    CParen=37
    SColon=38
    Assign=39
    Comma=40
    QMark=41
    Colon=42
    Bool=43
    Number=44
    Identifier=45
    String=46
    Comment=47
    Space=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguisParser.StatementContext)
            else:
                return self.getTypedRuleContext(LinguisParser.StatementContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguisParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(LinguisParser.FunctionDeclContext,i)


        def Return(self):
            return self.getToken(LinguisParser.Return, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)


        def SColon(self):
            return self.getToken(LinguisParser.SColon, 0)

        def getRuleIndex(self):
            return LinguisParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LinguisParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35184372092150) != 0):
                self.state = 30
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 4, 5, 7, 10, 11, 45]:
                    self.state = 28
                    self.statement()
                    pass
                elif token in [6]:
                    self.state = 29
                    self.functionDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 35
                self.match(LinguisParser.Return)
                self.state = 36
                self.expression(0)
                self.state = 37
                self.match(LinguisParser.SColon)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(LinguisParser.AssignmentContext,0)


        def SColon(self):
            return self.getToken(LinguisParser.SColon, 0)

        def functionCall(self):
            return self.getTypedRuleContext(LinguisParser.FunctionCallContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(LinguisParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(LinguisParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(LinguisParser.WhileStatementContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LinguisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.assignment()
                self.state = 42
                self.match(LinguisParser.SColon)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.functionCall()
                self.state = 45
                self.match(LinguisParser.SColon)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 47
                self.ifStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 48
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 49
                self.whileStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(LinguisParser.Identifier, 0)

        def Assign(self):
            return self.getToken(LinguisParser.Assign, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = LinguisParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(LinguisParser.Identifier)
            self.state = 53
            self.match(LinguisParser.Assign)
            self.state = 54
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LinguisParser.RULE_functionCall

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssertFunctionCallContext(FunctionCallContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LinguisParser.FunctionCallContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Assert(self):
            return self.getToken(LinguisParser.Assert, 0)
        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)
        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)

        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertFunctionCall" ):
                listener.enterAssertFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertFunctionCall" ):
                listener.exitAssertFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertFunctionCall" ):
                return visitor.visitAssertFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class SizeFunctionCallContext(FunctionCallContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LinguisParser.FunctionCallContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Size(self):
            return self.getToken(LinguisParser.Size, 0)
        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)
        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)

        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSizeFunctionCall" ):
                listener.enterSizeFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSizeFunctionCall" ):
                listener.exitSizeFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSizeFunctionCall" ):
                return visitor.visitSizeFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class PrintlnFunctionCallContext(FunctionCallContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LinguisParser.FunctionCallContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Println(self):
            return self.getToken(LinguisParser.Println, 0)
        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)
        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)

        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintlnFunctionCall" ):
                listener.enterPrintlnFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintlnFunctionCall" ):
                listener.exitPrintlnFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintlnFunctionCall" ):
                return visitor.visitPrintlnFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class IdentifierFunctionCallContext(FunctionCallContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LinguisParser.FunctionCallContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(LinguisParser.Identifier, 0)
        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)
        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)
        def exprList(self):
            return self.getTypedRuleContext(LinguisParser.ExprListContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierFunctionCall" ):
                listener.enterIdentifierFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierFunctionCall" ):
                listener.exitIdentifierFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierFunctionCall" ):
                return visitor.visitIdentifierFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class PrintFunctionCallContext(FunctionCallContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LinguisParser.FunctionCallContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Print(self):
            return self.getToken(LinguisParser.Print, 0)
        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)
        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)

        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintFunctionCall" ):
                listener.enterPrintFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintFunctionCall" ):
                listener.exitPrintFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintFunctionCall" ):
                return visitor.visitPrintFunctionCall(self)
            else:
                return visitor.visitChildren(self)



    def functionCall(self):

        localctx = LinguisParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                localctx = LinguisParser.IdentifierFunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(LinguisParser.Identifier)
                self.state = 57
                self.match(LinguisParser.OParen)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 132027579957310) != 0):
                    self.state = 58
                    self.exprList()


                self.state = 61
                self.match(LinguisParser.CParen)
                pass
            elif token in [1]:
                localctx = LinguisParser.PrintlnFunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(LinguisParser.Println)
                self.state = 63
                self.match(LinguisParser.OParen)
                self.state = 64
                self.expression(0)
                self.state = 65
                self.match(LinguisParser.CParen)
                pass
            elif token in [2]:
                localctx = LinguisParser.PrintFunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(LinguisParser.Print)
                self.state = 68
                self.match(LinguisParser.OParen)
                self.state = 69
                self.expression(0)
                self.state = 70
                self.match(LinguisParser.CParen)
                pass
            elif token in [4]:
                localctx = LinguisParser.AssertFunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.match(LinguisParser.Assert)
                self.state = 73
                self.match(LinguisParser.OParen)
                self.state = 74
                self.expression(0)
                self.state = 75
                self.match(LinguisParser.CParen)
                pass
            elif token in [5]:
                localctx = LinguisParser.SizeFunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 77
                self.match(LinguisParser.Size)
                self.state = 78
                self.match(LinguisParser.OParen)
                self.state = 79
                self.expression(0)
                self.state = 80
                self.match(LinguisParser.CParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStat(self):
            return self.getTypedRuleContext(LinguisParser.IfStatContext,0)


        def End(self):
            return self.getToken(LinguisParser.End, 0)

        def elseIfStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguisParser.ElseIfStatContext)
            else:
                return self.getTypedRuleContext(LinguisParser.ElseIfStatContext,i)


        def elseStat(self):
            return self.getTypedRuleContext(LinguisParser.ElseStatContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = LinguisParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.ifStat()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.elseIfStat() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 91
                self.elseStat()


            self.state = 94
            self.match(LinguisParser.End)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(LinguisParser.If, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)


        def Do(self):
            return self.getToken(LinguisParser.Do, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = LinguisParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(LinguisParser.If)
            self.state = 97
            self.expression(0)
            self.state = 98
            self.match(LinguisParser.Do)
            self.state = 99
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else(self):
            return self.getToken(LinguisParser.Else, 0)

        def If(self):
            return self.getToken(LinguisParser.If, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)


        def Do(self):
            return self.getToken(LinguisParser.Do, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_elseIfStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseIfStat" ):
                listener.enterElseIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseIfStat" ):
                listener.exitElseIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseIfStat" ):
                return visitor.visitElseIfStat(self)
            else:
                return visitor.visitChildren(self)




    def elseIfStat(self):

        localctx = LinguisParser.ElseIfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseIfStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(LinguisParser.Else)
            self.state = 102
            self.match(LinguisParser.If)
            self.state = 103
            self.expression(0)
            self.state = 104
            self.match(LinguisParser.Do)
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Else(self):
            return self.getToken(LinguisParser.Else, 0)

        def Do(self):
            return self.getToken(LinguisParser.Do, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_elseStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseStat" ):
                listener.enterElseStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseStat" ):
                listener.exitElseStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStat" ):
                return visitor.visitElseStat(self)
            else:
                return visitor.visitChildren(self)




    def elseStat(self):

        localctx = LinguisParser.ElseStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(LinguisParser.Else)
            self.state = 108
            self.match(LinguisParser.Do)
            self.state = 109
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Def(self):
            return self.getToken(LinguisParser.Def, 0)

        def Identifier(self):
            return self.getToken(LinguisParser.Identifier, 0)

        def OParen(self):
            return self.getToken(LinguisParser.OParen, 0)

        def CParen(self):
            return self.getToken(LinguisParser.CParen, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def End(self):
            return self.getToken(LinguisParser.End, 0)

        def idList(self):
            return self.getTypedRuleContext(LinguisParser.IdListContext,0)


        def getRuleIndex(self):
            return LinguisParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = LinguisParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LinguisParser.Def)
            self.state = 112
            self.match(LinguisParser.Identifier)
            self.state = 113
            self.match(LinguisParser.OParen)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 114
                self.idList()


            self.state = 117
            self.match(LinguisParser.CParen)
            self.state = 118
            self.block()
            self.state = 119
            self.match(LinguisParser.End)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def For(self):
            return self.getToken(LinguisParser.For, 0)

        def Identifier(self):
            return self.getToken(LinguisParser.Identifier, 0)

        def Assign(self):
            return self.getToken(LinguisParser.Assign, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LinguisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LinguisParser.ExpressionContext,i)


        def To(self):
            return self.getToken(LinguisParser.To, 0)

        def Do(self):
            return self.getToken(LinguisParser.Do, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def End(self):
            return self.getToken(LinguisParser.End, 0)

        def getRuleIndex(self):
            return LinguisParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = LinguisParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LinguisParser.For)
            self.state = 122
            self.match(LinguisParser.Identifier)
            self.state = 123
            self.match(LinguisParser.Assign)
            self.state = 124
            self.expression(0)
            self.state = 125
            self.match(LinguisParser.To)
            self.state = 126
            self.expression(0)
            self.state = 127
            self.match(LinguisParser.Do)
            self.state = 128
            self.block()
            self.state = 129
            self.match(LinguisParser.End)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def While(self):
            return self.getToken(LinguisParser.While, 0)

        def expression(self):
            return self.getTypedRuleContext(LinguisParser.ExpressionContext,0)


        def Do(self):
            return self.getToken(LinguisParser.Do, 0)

        def block(self):
            return self.getTypedRuleContext(LinguisParser.BlockContext,0)


        def End(self):
            return self.getToken(LinguisParser.End, 0)

        def getRuleIndex(self):
            return LinguisParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = LinguisParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(LinguisParser.While)
            self.state = 132
            self.expression(0)
            self.state = 133
            self.match(LinguisParser.Do)
            self.state = 134
            self.block()
            self.state = 135
            self.match(LinguisParser.End)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
